# yoe-kiosk-browser

./: CMakeLists.txt  README.md  eglfs.json  example-error-page.html  main.cpp  main.qml  yoe-kiosk-browser-eglfs.service  yoe-kiosk-browser-env  yoe-kiosk-browser-linuxfb.service  yoe-kiosk-browser-wayland.service  yoe-kiosk-browser.service
